--- a/Spaces/Spaces.vcxproj.filters
+++ b/Spaces/Spaces.vcxproj.filters
@@ -32,10 +32,10 @@
     <ClInclude Include="Object.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ComponentManager.h">
+    <ClInclude Include="Exceptions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Exceptions.h">
+    <ClInclude Include="ManagedComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
